[package]
name = "sqlx-test"
version = "0.1.0"
authors = ["cutsea110 <cutsea110@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = [ "attributes" ] }
async-trait = "0.1.73"
sqlx = { varsion = "0.71", features = [ "postgres", "runtime-async-std", "tls-native-tls" ] }
futures = "0.3.28"
anyhow = "1.0.75"
openssl = { version = "0.10", features = ["vendored"] }
thiserror = "1.0"
