[package]
name = "sqlx-test"
version = "0.1.0"
authors = ["cutsea110 <cutsea110@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { varsion = "0.71", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
