[package]
name = "sqlx-test"
version = "0.1.0"
authors = ["cutsea110 <cutsea110@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
